--- a/grid_breakpoint/CSS/style.css
+++ b/grid_breakpoint/CSS/style.css
@@ -98,6 +98,11 @@ footer{
         flex-direction: column;
     }
 
+    nav{
+        grid-column: 1/2;
+        grid-row: 1/3;
+    }
+
 }
 
 @media (max-width: 800px) {
